# jumi-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_dependencies.bat  build_project.bat  build_project.sh  premake5.lua  run_project.sh  vcpkg.json
EngineCore/: CMakeLists.txt  post_build.py  premake5.lua
EngineCore/include/EngineCore/components/: camera.h  component_interface.h  directional_light.h  scene.h  scene_object.h  transform.h
EngineCore/include/EngineCore/core/: core.h  engine_core.h
EngineCore/include/EngineCore/events/: event_bus.h
EngineCore/include/EngineCore/input/: input_handler.h  keycodes.h
EngineCore/include/EngineCore/logging/: logger.h
EngineCore/include/EngineCore/math/: functions.h  matrix.h  vector.h
EngineCore/include/EngineCore/renderer/: mesh.h  renderer.h  shader.h
EngineCore/include/EngineCore/resources/: resource_library.h
EngineCore/include/EngineCore/window/: window_handler.h
EngineCore/src/components/: camera.cpp  camera.h  directional_light.cpp  directional_light.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h  transform.cpp  transform.h
EngineCore/src/core/: core.h  engine_core.cpp  engine_core.h  game.h
EngineCore/src/events/: event_bus.cpp  event_bus.h
EngineCore/src/input/: input_handler.cpp  input_handler.h  keycode_converter.cpp  keycode_converter.h  keycodes.cpp  keycodes.h
EngineCore/src/logging/: logger.cpp  logger.h
EngineCore/src/math/: functions.cpp  functions.h  math.cpp  math.h  matrix.cpp  matrix.h  vector.cpp  vector.h
EngineCore/src/renderer/: mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  vertex_array_object.cpp  vertex_array_object.h
EngineCore/src/resources/: resource_library.cpp  resource_library.h
EngineCore/src/window/: window_handler.cpp  window_handler.h
JumiEditor/: imgui.ini  premake5.lua
JumiEditor/src/application/: main.cpp
JumiEditor/src/editor/: header_bar.cpp  header_bar.h  imgui_component.cpp  imgui_component.h  imgui_core.cpp  imgui_core.h  imgui_window.h  properties_inspector.cpp  properties_inspector.h  scene_hierarchy.cpp  scene_hierarchy.h  scene_view.cpp  scene_view.h
Sandbox/: CMakeLists.txt  pre_build.py
Sandbox/src/application/: main.cpp
engine_core/: CMakeLists.txt  premake5.lua
engine_core/include/engine_core/core/: engine_core.h  event_bus.h  exceptions.h  logger.h  structs.h  timers.cpp  timers.h
engine_core/include/engine_core/events/: event_bus.h  event_types.h
engine_core/include/engine_core/input/: input_handler.h  keycodes.h
engine_core/include/engine_core/math/: math_types.h
engine_core/include/engine_core/renderer/: i_shader.h  renderer.h  shader.h
engine_core/include/engine_core/resources/: resource_manager.h
engine_core/include/engine_core/scene/: scene_object.h
engine_core/include/engine_core/structs/: structs.h
engine_core/include/engine_core/utility/: utility.h
engine_core/include/engine_core/window/: window_handler.h
engine_core/resources/shaders/: __DEFAULT_FRAGMENT__.frag  __DEFAULT_VERTEX__.vert
engine_core/src/core/: engine_core.cpp
engine_core/src/events/: event_bus.cpp  event_bus_LOCAL_1823.cpp  event_types.cpp
engine_core/src/internal/: backend.cpp  backend.h  logger.cpp
engine_core/src/internal/core/: backend.cpp  backend.h  engine_callback_context.cpp  engine_callback_context.h  glfw_callback_context.cpp  glfw_callback_context.h  logger.cpp
engine_core/src/internal/input/: input_handler.cpp  input_handler.h
engine_core/src/internal/interfaces/: i_renderer.h  i_requires_init.h
engine_core/src/internal/math/: math_types.h
engine_core/src/internal/renderer/: direct3d_renderer.cpp  direct3d_renderer.h  i_opengl_resource.h  index_buffer_object.h  mesh.cpp  mesh.h  opengl_renderer.cpp  opengl_renderer.h  renderer.cpp  shader.cpp  shader.h  vertex_array_object.cpp  vertex_array_object.h  vertex_buffer_object.cpp  vertex_buffer_object.h  vulkan_renderer.cpp  vulkan_renderer.h
engine_core/src/internal/resources/: shader_library.cpp  shader_library.h
engine_core/src/internal/window/: window_handler.cpp  window_handler.h
engine_core/src/public/core/: engine_core.cpp  logger.cpp  timers.cpp
engine_core/src/public/input/: input_handler.cpp  keycodes.cpp
engine_core/src/public/renderer/: renderer.cpp  shader.cpp
engine_core/src/public/resources/: resource_manager.cpp
engine_core/src/public/scene/: scene_object.cpp
engine_core/src/public/utility/: utility.cpp
engine_core/src/public/window/: window_handler.cpp
jumi_editor/: CMakeLists.txt  premake5.lua
jumi_editor/src/application/: main.cpp
jumi_editor/src/entry_point/: main.cpp
jumi_math/: premake5.lua
jumi_math/include/jumi_math/math/: math_types.h
scene_manager/: premake5.lua
scene_manager/include/scene_manager/scene/: scene.h
scene_manager/src/public/scene/: scene.cpp
